--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -354,6 +355,25 @@
                 </div>
             </div>
 
+
+
+            <!-- Search + Price Filter (Added) -->
+<div class="flex flex-col md:flex-row justify-between items-center mb-8 gap-4" data-aos="fade-up">
+  <input
+    id="search-input"
+    type="text"
+    placeholder="Search products..."
+    class="search-input bg-[#1e293b] text-gray-300 border border-green-900/30 rounded-full py-2 px-5 w-full md:w-1/3 focus:outline-none focus:ring-2 focus:ring-green-500"
+  />
+  <div class="flex items-center space-x-3">
+    <label for="price-range" class="text-gray-300 text-sm">Max Price:</label>
+    <input id="price-range" type="range" min="0" max="5" value="5" class="w-40 accent-green-500" />
+    <span id="price-value" class="text-green-400 font-medium">$5</span>
+  </div>
+</div>
+
+
+            
             <!-- Product Grid -->
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
                 <!-- Product 1 -->
