--- a/hami-main/index.html
+++ b/hami-main/index.html
@@ -895,6 +895,8 @@
     <div id="cart-overlay" class="fixed inset-0 bg-black/50 z-40 opacity-0 pointer-events-none transition-opacity duration-300"></div>
 
     <!-- Scripts -->
-   <script src="app.js"></script>
+   <!-- <script src="app.js"></script> -->
+<script type="module" src="main.js"></script>
+
 </body>
 </html>
