--- a/index.html
+++ b/index.html
@@ -373,114 +373,9 @@
 
 
             
-            <!-- Product Grid -->
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
-                <!-- Product 1 -->
-                <div class="product-card group bg-[#1e293b] rounded-xl overflow-hidden shadow-lg transition-all duration-500 hover:shadow-green-500/20" 
-                     data-aos="fade-up" data-aos-delay="100" data-category="fruit">
-                    <div class="relative overflow-hidden h-60">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ0xhn1HZjbYxDZW5g-QtBNfW9KZo5ydAuZw&s" alt="Organic Apples" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-                        <span class="absolute top-4 right-4 bg-green-500 text-white text-xs font-bold px-2 py-1 rounded-full">Organic</span>
-                    </div>
-                    <div class="p-5">
-                        <div class="flex justify-between items-start">
-                            <h3 class="text-lg font-semibold text-white mb-1">Organic Apples</h3>
-                            <span class="text-green-400 font-bold">$2.99/kg</span>
-                        </div>
-                        <p class="text-gray-400 text-sm mb-4">Crisp and sweet, perfect for snacks</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center">
-                                <i data-feather="star" class="w-4 h-4 text-yellow-400 fill-current"></i>
-                                <span class="text-sm ml-1">4.8 (124)</span>
-                            </div>
-                            <button class="add-to-cart bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-full text-sm font-medium transition-colors">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 2 -->
-                <div class="product-card group bg-[#1e293b] rounded-xl overflow-hidden shadow-lg transition-all duration-500 hover:shadow-green-500/20" 
-                     data-aos="fade-up" data-aos-delay="200" data-category="vegetable">
-                    <div class="relative overflow-hidden h-60">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ147q6Xk6hq61xWH9IsUOb9MID0hC5Cnd3C_zSRIQRjhdkgi1-Yrn0M4MnXlxpfDKVlo0&usqp=CAU" alt="Fresh Carrots" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-                    </div>
-                    <div class="p-5">
-                        <div class="flex justify-between items-start">
-                            <h3 class="text-lg font-semibold text-white mb-1">Fresh Carrots</h3>
-                            <span class="text-green-400 font-bold">$1.49/kg</span>
-                        </div>
-                        <p class="text-gray-400 text-sm mb-4">Crunchy and nutrient-rich</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center">
-                                <i data-feather="star" class="w-4 h-4 text-yellow-400 fill-current"></i>
-                                <span class="text-sm ml-1">4.6 (89)</span>
-                            </div>
-                            <button class="add-to-cart bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-full text-sm font-medium transition-colors">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product 3 -->
-                <div class="product-card group bg-[#1e293b] rounded-xl overflow-hidden shadow-lg transition-all duration-500 hover:shadow-green-500/20" 
-                     data-aos="fade-up" data-aos-delay="300" data-category="fruit">
-                    <div class="relative overflow-hidden h-60">
-                        <img src="https://i.pinimg.com/736x/5f/c2/d1/5fc2d1a488d3c6f3a00760c0993867bd.jpg" alt="Juicy Oranges" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-                        <span class="absolute top-4 right-4 bg-green-500 text-white text-xs font-bold px-2 py-1 rounded-full">Organic</span>
-                    </div>
-                    <div class="p-5">
-                        <div class="flex justify-between items-start">
-                            <h3 class="text-lg font-semibold text-white mb-1">Juicy Oranges</h3>
-                            <span class="text-green-400 font-bold">$3.49/kg</span>
-                        </div>
-                        <p class="text-gray-400 text-sm mb-4">Vitamin C packed citrus</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center">
-                                <i data-feather="star" class="w-4 h-4 text-yellow-400 fill-current"></i>
-                                <span class="text-sm ml-1">4.9 (156)</span>
-                            </div>
-                            <button class="add-to-cart bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-full text-sm font-medium transition-colors">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                 <!-- Product 4 -->
-                <div class="product-card group bg-[#1e293b] rounded-xl overflow-hidden shadow-lg transition-all duration-500 hover:shadow-green-500/20" 
-                     data-aos="fade-up" data-aos-delay="300" data-category="fruit">
-                    <div class="relative overflow-hidden h-60">
-                        <img src="https://www.foodandwine.com/thmb/lfOAWN5BiVnpviTHo8hqTX3BGck=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Trendspotting-Gonzo-Fruit-Platters-FT-DI-MAG1123-5d7b3a18d5ff4400ab10e3fe6c970f33.jpg" alt="Juicy Oranges" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
-
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent"></div>
-                        <span class="absolute top-4 right-4 bg-green-500 text-white text-xs font-bold px-2 py-1 rounded-full">Organic</span>
-                    </div>
-                    <div class="p-5">
-                        <div class="flex justify-between items-start">
-                            <h3 class="text-lg font-semibold text-white mb-1">Mixed Fruit Platter</h3>
-                            <span class="text-green-400 font-bold">$3.49/kg</span>
-                        </div>
-                        <p class="text-gray-400 text-sm mb-4">Assorted seasonal fruits</p>
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center">
-                                <i data-feather="star" class="w-4 h-4 text-yellow-400 fill-current"></i>
-                                <span class="text-sm ml-1">4.9 (156)</span>
-                            </div>
-                            <button class="add-to-cart bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-full text-sm font-medium transition-colors">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
+            <!-- Product Grid (rendered from products.js) -->
+            <div id="product-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8" aria-live="polite">
+                <!-- Products will be injected here by JavaScript -->
             </div>
         </div>
     </section>
@@ -894,8 +789,7 @@
     </div>
     <div id="cart-overlay" class="fixed inset-0 bg-black/50 z-40 opacity-0 pointer-events-none transition-opacity duration-300"></div>
 
-    <!-- Scripts -->
-   <!-- <script src="app.js"></script> -->
+    
 <script type="module" src="main.js"></script>
 
 </body>
